--- a/impressum.html
+++ b/impressum.html
@@ -8,17 +8,17 @@
     <h1>Impressum</h1>
 
     <p><strong>Angaben gemäß § 5 TMG</strong></p>
-    <p>Max Mustermann<br>
-    Musterstraße 1<br>
-    12345 Musterstadt</p>
+    <p>Marleen Drews<br>
+    Otto-Grot-Str.61b<br>
+    21035 Hamburg</p>
 
     <p><strong>Kontakt</strong></p>
-    <p>E-Mail: max@example.com</p>
+    <p>E-Mail: leichtigkeit.leben@outlook.de</p>
 
     <p><strong>Verantwortlich für den Inhalt nach § 18 Abs. 2 MStV</strong></p>
-    <p>Max Mustermann<br>
-    Musterstraße 1<br>
-    12345 Musterstadt</p>
+    <p>Marleen Drews<br>
+    Otto-Grot-Str.61b<br>
+    21035 Hamburg</p>
 
     <p><em>Dieses Impressum gilt auch für meine Social-Media-Präsenzen, insbesondere Instagram.</em></p>
 </body>
